--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
@@ -7,7 +7,7 @@
       <div style="padding-bottom: 10px; text-align: center; font-weight: bold" class="label">{{'contract.detail' | translate}}</div>
       <div style="line-height: 25px">
         <div>
-          <span class="title-contract">{{'contract.uid' | translate}}:</span>
+          <span class="title-contract">{{'contract.uiddd' | translate}}:</span>
           <span>{{datas?.is_data_contract?.contract_uid}}</span>
         </div>
         <div>
@@ -64,7 +64,7 @@
           <div class="confirm-radio d-flex justify-content-between mx-4">
             <div class="radio-confirm">
               <input id="radio-confirm-consider" type="radio" name="confirm-radio-consider" [value]="1" [(ngModel)]="confirmConsider">
-              <label for="radio-confirm-consider" class="ms-2">{{'btn.accept' | translate}}</label>
+              <label for="radio-confirm-consider" class="ms-2">{{'btn.accept1' | translate}}</label>
             </div>
             <div class="radio-refuse">
               <input id="radio-refuse-consider" type="radio" name='confirm-radio-consider' [value]="2" [(ngModel)]="confirmConsider">
@@ -77,7 +77,7 @@
           <p class="d-flex mb-2 text-align-left mx-3">{{'content.confirm' | translate}}</p>
           <div class="confirm-radio d-flex justify-content-between mx-4">
             <div class="radio-confirm">
-              <input id="radio-confirm-secretary" type="radio" name="confirm-radio-secretary" [value]="1" [(ngModel)]='confirmSignature'>
+              <input id="radio-confirm-secretary" type="radio" name="confirm-radio-secretary" [value]="1" [(ngModel)]='confirmSignature' (click)="resetToDefault()">
               <label for="radio-confirm-secretary" class="ms-2">{{'btn.accept' | translate}}</label>
             </div>
             <div class="radio-refuse">
@@ -92,6 +92,15 @@
 
   <div (scroll)="scroll($event)" id="pdf-full" class="col-md-9 sample-contract__file viewer-pdf isDrag"
        style="background-color: #F2F2F2; position: relative">
+    <div class="zoom-in-out" *ngIf="confirmSignature !== 1">
+        <img src="../../assets/img/minus.png" style="margin-bottom:3px;height: 30px; width: 30px;" (click)="changeScale('-')" />&nbsp;
+        <input class="input-web" type="text" style="width: 50px;height: 30px" [value]="defaultValue + '%'" disabled>&nbsp;
+        <img src="../../assets/img/plus.png" style="margin-bottom:3px; height: 30px; width: 30px;" (click)="changeScale('+')" />
+    </div>
+    <!-- <div class="rotate" *ngIf="confirmSignature === 1">
+      <img src="../../assets/img/rotate-left.svg" style="margin-bottom:3px;height: 30px; width: 30px;" (click)="changeRotate('-')"/>&nbsp;
+      <img src="../../assets/img/rotate-right.svg" style="margin-bottom:3px; height: 30px; width: 30px;" (click)="changeRotate('+')" />
+    </div> -->
     <div id="pdf-viewer-step-3">
       <div *ngFor="let d of this.convertToSignConfig()" class="show-list-name-drag" [style.width]="this.canvasWidth">
         <div class="resize-drag not-out-drop" *ngIf="![2,3].includes(recipient.status)"
@@ -182,7 +191,7 @@
         <div class="confirm-radio d-flex justify-content-between mx-4">
           <div class="radio-confirm">
             <input id="radio-confirm-consider" type="radio" name="confirm-radio-consider" [value]="1" [(ngModel)]="confirmConsider">
-            <label for="radio-confirm-consider" class="ms-2">{{'btn.accept' | translate}}</label>
+            <label for="radio-confirm-consider" class="ms-2">{{'btn.accept3' | translate}}</label>
           </div>
           <div class="radio-refuse">
             <input id="radio-refuse-consider" type="radio" name='confirm-radio-consider' [value]="2" [(ngModel)]="confirmConsider">
@@ -196,7 +205,7 @@
         <div class="confirm-radio d-flex justify-content-between mx-4">
           <div class="radio-confirm">
             <input id="radio-confirm-secretary" type="radio" name="confirm-radio-secretary" [value]="1" [(ngModel)]='confirmSignature'>
-            <label for="radio-confirm-secretary" class="ms-2">{{'btn.accept' | translate}}</label>
+            <label for="radio-confirm-secretary" class="ms-2">{{'btn.accept4' | translate}}</label>
           </div>
           <div class="radio-refuse">
             <input id="radio-refuse-secretary" type="radio" name='confirm-radio-secretary' [value]="2" [(ngModel)]='confirmSignature'>
