--- a/src/app/main/contract/detail-contract/detail-contract.component.html
+++ b/src/app/main/contract/detail-contract/detail-contract.component.html
@@ -5,7 +5,7 @@
       <div style="padding-bottom: 10px; text-align: center; font-weight: bold" class="label" (click)="t()">{{'contract.detail' | translate}}</div>
       <div style="line-height: 25px">
         <div>
-          <span class="title-contract">{{'contract.uid1' | translate}}:</span>
+          <span class="title-contract">{{'contract.uid' | translate}}:</span>
           <span>{{datas?.is_data_contract?.contract_uid}}</span>
         </div>
         <div>
