--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -114,20 +114,16 @@
                 </button>
               </div>
 
-              <!-- <div class="form-group sub-login">
-                <button class="btn btn-lg btn-block sso-btn" (click)="loginSSO()">
-                  {{ "btn.sso.login" | translate }}
-                </button>
-              </div> -->
-
-              <!-- <div class="form-group sign-up">
+              <div *ngIf="isNB" class="form-group sign-up">
                 <b>{{ "signup.not_account" | translate }}?</b>&nbsp;<a
                   href="/signup"
                   >{{ "signup" | translate }}</a
                 >
-              </div> -->
+              </div>
             </form>
-            <div class="form-signin">
+
+            <!-- SSO -->
+            <div *ngIf="!isNB" class="form-signin">
               <div class="form-group">
                 <p class="login_methods__title">
                   <span>
@@ -144,6 +140,7 @@
                 </div>
               </div>
             </div>
+            <!-- SSO -->
           </div>
         </div>
 
@@ -155,7 +152,7 @@
   </div>
 </div>
 
-<div *ngIf="this.mobile == true && !isSSOlogin" class="all">
+<div *ngIf="this.mobile == true" class="all">
   <div>
     <div class="left-background-mobile"></div>
     <div class="right-panel-mobile">
@@ -264,18 +261,12 @@
               </button>
             </div>
 
-            <!-- <div class="form-group sub-login">
-              <button class="btn btn-lg btn-block sso-btn" (click)="loginSSO()">
-                {{ "btn.sso.login" | translate }}
-              </button>
-            </div> -->
-
-            <!-- <div class="form-group sign-up">
+            <div *ngIf="isNB" class="form-group sign-up">
               <b>{{ "signup.not_account" | translate }}?</b>&nbsp;<a
                 href="/signup"
                 >{{ "signup" | translate }}</a
               >
-            </div> -->
+            </div>
           </form>
         </div>
 
@@ -286,8 +277,8 @@
     </div>
   </div>
 </div>
- 
-<div *ngIf="isSSOlogin">
+
+<div *ngIf="!isNB && isSSOlogin">
   <h2>Đang tải dữ liệu...</h2>
   <ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#fff" type="ball-spin-clockwise">
     <p style="font-size: 18px; color: white">{{'Đang tải dữ liệu' | translate}}...</p>
