--- a/src/app/main/sidebar/sidebar.component.html
+++ b/src/app/main/sidebar/sidebar.component.html
@@ -48,6 +48,11 @@
           </li>
         </ul>
       </div>
+      <!-- <div style="padding: 16px;">
+        <img src="../../../assets/img/logo-mobifone.svg"/>
+      </div> -->
     </perfect-scrollbar>
+    
+
   </div>
 </nav>
