--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -8,13 +8,29 @@
       <div class="add-contract-theme">
         <div style="max-width: 450px;">
           <span style="font-size: 18px;">Xin chào, {{this.currentName}}</span>
-          <br>
+          <br><br>
           <span>{{'text.dashboard.theme' | translate}}</span>
         </div>
         <br>
-        <button class="btn_add_contract" (click)="clickAddContract()">{{'menu.contract.add' | translate}}
-          <img src="../../assets/img/add-square_db.svg"/>
-        </button>
+        <div class="ceate_contract">
+          <button class="btn_add_contract" mat-icon-button [matMenuTriggerFor]="menu">{{'menu.contract.add' | translate}}
+            <img src="../../assets/img/add-square_db.svg"/>
+          </button>
+          <mat-menu #menu="matMenu" style="margin-left: 50px;" class="popup_create_contract" xPosition = "after">
+            <button mat-menu-item class="div_icon" (click)="clickAddContract()">
+              <mat-icon><img src="../../assets/img/document.svg" class="img_icon"/></mat-icon>
+              <span class="ceate_contract_text">{{'create.contract.no.template' | translate}}</span>
+            </button>
+            <button mat-menu-item class="div_icon" (click)="clickAddContract()">
+              <mat-icon><img src="../../assets/img/document-copy.svg" class="img_icon"/></mat-icon>
+              <span class="ceate_contract_text">{{'create.contract.batch' | translate}}</span>
+            </button>
+            <button mat-menu-item class="div_icon" (click)="clickAddContract()">
+              <mat-icon><img src="../../assets/img/document-code-2.svg" class="img_icon"/></mat-icon>
+              <span class="ceate_contract_text">{{'create.contract.template' | translate}}</span>
+            </button>
+          </mat-menu>
+        </div>
       </div>
     </div>
     
@@ -27,31 +43,32 @@
           <span style="color: #0041C4; cursor: pointer;"><b (click)="openLink('/main/contract/create/draft')">Xem tất cả</b></span>
         </div>
         <br>
-        <div class="row_text_2">
+        <div class="row_text_2" *ngFor="let item of contractConnectList; let i = index">
           <div>
             <img src="../../assets/img/frame_contract.svg">
           </div>
           <!-- chưa xử lý logic mới chỉ để tạm giao diện -->
           <div class="body_row_1"  id="noti" > 
-            <div *ngFor="let item of contractConnectList; let i = index"  style="padding: 4px;">
+            <div   style="padding: 4px;">
               <a (click)="detailContract(item.id)" style="text-decoration: none;">
               <div class="row">
-                <div *ngIf="this.lang == 'vi'" class="col-md-12 item_contract_name1">{{item.name}}</div>
-                <!-- <div *ngIf="this.lang == 'en'" class="col-md-12 item_contract_name1" (click)="openLinkNotification(item.notice_url, item.id)">{{item.notice_name.replace("Ký HĐ","Sign contract").replace("Quá hạn","Overdue").replace("Hoàn thành","Completed")}}</div> -->
+                <div *ngIf="this.lang == 'vi'" class="col-md-10 item_contract_name1">{{item.name}}</div>
               </div>
-  
-                <!-- <div class="row" *ngFor="let s of item.notice_content.split('<br/>')">
-                  <div *ngIf="!s.includes('\nBên B: #PARTICIPANT_2#')" class="col-md-12 item_contract_infor">
-                    <img src="../../../assets/img/user_icon.svg" width="12px"/>
-                      <span *ngIf="this.lang == 'vi' || !this.lang"> {{s.replace("Bên B: #PARTICIPANT_2#","")}}</span>
-                      <span *ngIf="this.lang == 'en'"> {{s.replace("Bên B: #PARTICIPANT_2#","").replace("Bên","Side")}}</span>
-                  </div>
-                </div> -->
-                <div class="row" *ngFor="let itemPar of sortParticipant(item.participants); let index = index">
-                  <div class="item_contract_infor">{{'side' | translate}} {{getNameOrganization(itemPar, index)}}
-                  </div>
+              <div class="row" *ngFor="let itemPar of sortParticipant(item.participants); let index = index">
+                <div class="item_contract_infor">{{'side' | translate}} {{getNameOrganization(itemPar, index)}}
+                </div>
+              </div>
+              <div>   
               </div>
               </a>
+            </div>
+          </div>
+          <div>
+          <div class="icon_draft">
+            <img src="../../../assets//img/edit-2.svg" style="width: 16px;" (click)="openEdit(item.id)">
+          </div>
+          <div class="icon_draft">
+            <img src="../../../assets//img/trash.svg" style="width: 16px;" (click)="deleteContract(item.id)">
           </div>
         </div>
         <br>
@@ -62,7 +79,7 @@
   
   <div class="row" style="padding-top: 12px;">
     <div class="col-md-6" style="background-color: #FFFFFF; border-radius: 12px; padding: 15px">
-      <span style="font-size: 16px; font-weight: 700;">{{'menu.contract.receive.list' | translate}}</span>
+      <span style="font-size: 14px; font-weight: 700;">{{'menu.contract.receive.list' | translate}}</span>
       <div class="container overflow-hidden">
         <div class="row gy">
           <div class="col-6">
@@ -136,15 +153,17 @@
           <!-- chưa xử lý logic mới chỉ để tạm giao diện -->
           <div class="body_row_1"  id="noti" > 
             <div >
-              <a href="{{item.notice_url}}" style="text-decoration: none;">
+              <a (click)="detailContract(item.participant.contract.id)" style="text-decoration: none;">
               <div class="row">
-                <div class="col-md-12 item_contract_name1" (click)="openLinkNotification(item.notice_url, item.id)">{{item.participant.contract.name}}</div>
+                <div class="col-md-12 item_contract_name1">{{item.participant.contract.name}}</div>
               </div>
               <div class="row">
                 <div style="display: flex; justify-content: space-between;">
                   <div style="padding-top: 20px;">
                     <img src="../../../assets/img/path.svg"/>
                     <span *ngIf="item.sign_type.length > 0" style="color: #EE7200; padding: 5px;">{{item.sign_type[0]?.name}}</span>
+                    <span *ngIf="item.role == 1" style="color: #EE7200; padding: 5px;">{{'Đang điều phối' | translate}}</span>
+                    <span *ngIf="item.role == 2" style="color: #EE7200; padding: 5px;">{{'Đang xem xét' | translate}}</span>
                   </div>
                   <div style="padding-top: 20px;">
                     <img src="../../../assets/img/calendar-tick.svg"/>
@@ -168,7 +187,7 @@
     <div class="col-md-6" style="background-color: #FFFFFF; border-radius: 12px; padding: 15px">
       <div class="row">
         <div class="col-md-6">
-          <span style="font-size: 16px; font-weight: 700;">{{'dashboard.contract.created' | translate}}</span>
+          <span style="font-size: 14px; font-weight: 700;">{{'dashboard.contract.created' | translate}}</span>
         </div>
         <div class="col-md-6">
           <p-calendar selectionMode="range" [readonlyInput]="true" [(ngModel)]="date" [showIcon]="true" dateFormat="dd/mm/yy" (onSelect)="searchCountCreate()"></p-calendar>
@@ -221,7 +240,7 @@
       <div class="package" style="background-color: #FFFFFF; border-radius: 12px; padding: 15px; height: 100%;">
         <div class="row">
           <div class="col-md-12">
-            <span style="font-size: 16px; font-weight: 700;">{{'package.document' | translate}}</span>
+            <span style="font-size: 14px; font-weight: 700;">{{'package.document' | translate}}</span>
           </div>
         </div>
         
