--- a/src/app/main/dashboard/dashboard.component.scss
+++ b/src/app/main/dashboard/dashboard.component.scss
@@ -34,6 +34,45 @@
   }
 }
 
+.icon_draft{
+  border-radius: 6px;
+  border: 0.5px solid var(--Neutral-05, #C6D2EA);
+  padding: 6px;
+  width: 30px;
+  height: 30px;
+  margin-right: 16px;
+  display: flex;
+  margin-top: 10px;
+  align-items: center;
+  cursor: pointer;
+}
+
+.ceate_contract{
+  cursor: pointer;
+}
+
+.ceate_contract_text{
+  margin: 5px;
+}
+
+::ng-deep .mat-menu-panel.popup_create_contract{
+
+  position: absolute;
+  top: -5.5% !important; 
+  left: 11.5% !important;
+  // height: 100%;
+  width: 100%;
+  border-radius: 8px;
+  max-width: 230px !important;
+}
+
+
+// ::ng-deep .cdk-overlay-container, .cdk-global-overlay-wrapper {
+//   position: absolute !important;
+//   left: 10% !important;
+//   top: 0px !important;
+// }
+
 .container-fluid{
   // background-color: #F5F5F5;
 }
@@ -151,7 +190,7 @@ h3{
   background: url("../../../assets/img/frame_db1.svg");
   background-size: cover;
   width: 100%;
-  height: 178px;
+  height: 200px;
   color: #FFFFFF;
   border-radius: 12px;
   padding: 24px;
@@ -162,6 +201,7 @@ h3{
   background-color: #FFFFFF;
   border-radius: 12px;
   padding: 24px;
+  height: 200px;
 }
 
 .contract-request{
@@ -192,7 +232,8 @@ h3{
   box-sizing: border-box;
   color: #001A4D;
   background: #FFFFFF;
-  font-size: 13px;
+  font-size: 14px;
+  font-weight: 700;
 }
 
 @media only screen and (max-width: 768px) {
