--- a/src/app/main/config-sms-email/config-sms-email.component.html
+++ b/src/app/main/config-sms-email/config-sms-email.component.html
@@ -47,6 +47,7 @@
 
   <!--Lệnh if để ẩn-->
   <div class="row" style="padding-top: 20px; flex-wrap: nowrap;">
+    <!-- Cấu hình ngày sắp hết hạn -->
     <div *ngIf="isRoleConfigExpirationDay" class="col-md-2" style="border: 1px solid #e6e7ec; border-radius: 8px; margin-left: 1%;">
       <div style="margin-top: 20px;">
         <div class="sms-header">
@@ -65,13 +66,13 @@
         </div>
       </div>
     </div>
-
+    
+    <!-- Cấu hình brandname -->
     <div *ngIf="isRoleConfigBrandname" class="col-md-9" style="border: 1px solid #e6e7ec; border-radius: 8px; margin-left: 6%;">
       <div style="margin-top: 20px;">
         <div class="sms-header">
           {{'config.brandname' | translate}}
         </div>
-        <!-- Cấu hình ngày sắp hết hạn -->
         <form [formGroup]="brandnameForm" class="content">
           <div class="row" style="margin-top: 10px;">
             <div class="col-md-3">
@@ -139,7 +140,93 @@
       </div>
     </div>
   </div>
-
+  
+  <!-- Cấu hình email server 3 2 3 2 2-->
+  <div class="row email-config" *ngIf="isRoleConfigEmailServer">
+    <div style="margin-top: 20px;">
+      <div class="sms-header">
+        {{'config.email.server' | translate}}
+      </div>
+      <form [formGroup]="ConfigEmailServerForm" class="content cod-md-12">
+        <div class="row" style="margin-top: 10px;">
+          <div class="col-md-3">
+            <div class="label text-color">Email
+              <span class="required-title">*</span>
+            </div>
+            <div class="input-data">
+              <input style="width: 100%;" maxlength = '100' type="text" formControlName="userNameMailServer" placeholder="Nhập Email" (keyup)="onChangeEmailServer()">
+            </div>
+            <div *ngIf="e.userNameMailServer.errors" class="invalid">
+              <div *ngIf="e.userNameMailServer?.errors?.required">{{'error.user.email.required' | translate}}</div>
+              <div *ngIf="e.userNameMailServer?.errors?.pattern">{{'error.user.email.format' | translate}}</div>
+            </div>
+          </div>
+          
+          <div class="col-md-2">
+            <div class="label text-color">{{'aliases' | translate}}
+              <span class="required-title">*</span>
+            </div>
+            <div class="input-data">
+              <input style="width: 100%;" type="text" maxlength = '100' formControlName="aliasMailServer" placeholder="Nhập Bí danh">
+            </div>
+            <div *ngIf="e.aliasMailServer.errors" class="invalid">
+              <div *ngIf="e.aliasMailServer?.errors?.required">{{'error.aliases.required' | translate}}</div>
+            </div>
+          </div>
+          
+          <div class="col-md-3">
+            <div class="label text-color">{{'login.password' | translate}}
+              <span class="required-title">*</span>
+            </div>
+            <div class="input-data">
+              <input type="text" formControlName="passwordMailServer" [type]="fieldTextType ? 'text' : 'password'"
+               maxlength = '100' style="width: 90%;" placeholder="{{'password.enter' | translate}}">
+              <div class="icon-password">
+                <i class="fa" [ngClass]="{
+                  'fa-eye-slash': !fieldTextType,
+                  'fa-eye': fieldTextType
+                }" (click)="toggleFieldTextType()" style="color: #106db6; float: right;"></i>
+              </div>
+            </div>
+            <div *ngIf="e.passwordMailServer?.errors" class="invalid">
+              <div *ngIf="e.passwordMailServer?.errors?.required">{{'error.unit.password.required' | translate}}</div>
+            </div>
+          </div>
+          
+          <div class="col-md-2">
+            <div class="label text-color">SMTP Server
+              <span class="required-title">*</span>
+            </div>
+            <div class="input-data">
+              <input style="width: 100%;" type="text" maxlength = '100' formControlName="hostMailServer" placeholder="Nhập SMTP Server">
+            </div>
+            <div *ngIf="e.hostMailServer.errors" class="invalid">
+              <div *ngIf="e.hostMailServer?.errors?.required">{{'error.smtpServer.required' | translate}}</div>
+              <div *ngIf="e.hostMailServer?.errors?.pattern">{{'error.smtpServer.format' | translate}}</div>
+            </div>
+          </div>
+          
+          <div class="col-md-2">
+            <div class="label text-color">SMTP Port
+              <span class="required-title">*</span>
+            </div>
+            <div class="input-data">
+              <input style="width: 100%;" type="text" maxlength = '100' formControlName="portMailServer" placeholder="Nhập SMTP Server">
+            </div>
+            <div *ngIf="e.portMailServer.errors" class="invalid">
+              <div *ngIf="e.portMailServer?.errors?.required">{{'error.smtpPort.required' | translate}}</div>
+              <div *ngIf="e.portMailServer?.errors?.pattern">{{'error.smtpPort.format' | translate}}</div>
+            </div>
+          </div>
+          
+        </div>
+      </form>
+      <div class="save-btn" style="padding-bottom: 10px;">
+        <button [class]="isDisableConfigEmailServer? 'disable-button' : 'save-button'" [disabled]="isDisableConfigEmailServer" (click)="configEmailServer()" >{{'btn.save' | translate}}</button>
+      </div>
+    </div>
+  </div>
+  
   <div>
     <!-- <div style="justify-content: center;padding-top: 20px;">
       <button class="save-button" (click)="onSubmit()">{{'btn.save' | translate}}</button>
