--- a/src/app/main/config-sms-email/config-sms-email.component.scss
+++ b/src/app/main/config-sms-email/config-sms-email.component.scss
@@ -225,4 +225,12 @@ input[type="checkbox"] {
     float: right;
 }
 
+.email-config{
+  border: 1px solid #e6e7ec;
+  border-radius: 8px;
+  margin-top: 20px;
+  margin-left: 5px;
+  margin-right: 10px;
+}
+
   
