--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -14,8 +14,8 @@
           <div class="social-icons" ngbDropdownToggle>
             <span class="user_login"></span>
             <div style="display: flex; flex-direction: column;">
-              <div class="label">Ông/ Bà {{nameCurrentUser}}</div>
-              <div class="label">{{phoneCurrentUser}}</div>
+              <div class="label" style="color: #001A4D;">Ông/ Bà {{nameCurrentUser}}</div>
+              <div class="label" style="color: #A8B5CE;">{{phoneCurrentUser}}</div>
             </div>
             <div style="margin-left: 16px;">
               <img style="width: 24px; height: 24px;" src="../../assets/img/arrow-down.svg"/>
