--- a/src/app/main/contract/contract.component.scss
+++ b/src/app/main/contract/contract.component.scss
@@ -1,5 +1,5 @@
-.container-fluid{
-  background-color: #FFFFFF;
+.container-fluid-bg{
+  background-color: #FFFFFF !important;
 }
 
 .item_contract {
@@ -44,6 +44,7 @@
   height: 35px;
   display: inline-block;
   border-radius: 4px;
+  font-weight: 700;
 }
 
 .list_header{
@@ -157,7 +158,7 @@
 }
 .input-text {
   border: 0;
-  padding: 10px;
+  margin: 2px;
   width: 100%;
   outline:0px;
   background-color: #F1F5FE;
