[05142024 - Update Fe] Chỉnh sửa giao diện khi chưa có dữ liệu hoặc ít dữ liệu - Phần quản lý người dùng

--- a/src/app/main/role/role.component.scss
+++ b/src/app/main/role/role.component.scss
@@ -8,6 +8,11 @@
   font-size: 13px;
   margin: 0 10px;
 }
+
+.container-fluid{
+  background-color: #FFFFFF;
+}
+
 .input_text {
   padding-left: 10px;
   outline: none;
