--- a/src/app/main/contract-template/contract-template.component.html
+++ b/src/app/main/contract-template/contract-template.component.html
@@ -42,6 +42,7 @@
     <div class="col-md-3">{{'action' | translate}}</div>
   </div>
 
+  <div style="min-height: 68vh;">
   <div class="item_contract" *ngFor="let item of contractsTemplate  | paginate:{itemsPerPage: page, currentPage:p, totalItems: pageTotal}">
     
     <div class="row">
@@ -98,7 +99,7 @@
       </div>
     </div>
   </div>
-
+  </div>
   <div *ngIf="pageTotal == 0" 
   style="height: 100px;display: table;top: 0;left: 0;width: 100%;text-align: center;margin-top: 20px;">
     <div style="display: table-cell;vertical-align: middle;"> 
@@ -107,13 +108,12 @@
     </div>
   </div>
 
-  <div class="contract_footer">
-    <div class="footer_title"></div>
-    <div class="footer_pagination">
-      <pagination-controls *ngIf="pageTotal > 0;" (pageChange)="p=$event; getContractTemplateList()" previousLabel="" nextLabel=""></pagination-controls>
-    </div>
-    <div class="footer_page_number">{{'chart.number' | translate}}: {{pageStart}} - {{pageEnd}} / {{pageTotal}}</div>
+</div>
+<div class="contract_footer">
+  <div class="footer_title"></div>
+  <div class="footer_pagination">
+    <pagination-controls *ngIf="pageTotal > 0;" (pageChange)="p=$event; getContractTemplateList()" previousLabel="" nextLabel=""></pagination-controls>
   </div>
-
+  <div class="footer_page_number">{{'chart.number' | translate}}: {{pageStart}} - {{pageEnd}} / {{pageTotal}}</div>
 </div>
 </div>
