--- a/src/app/main/contract-template/contract-template.component.scss
+++ b/src/app/main/contract-template/contract-template.component.scss
@@ -6,6 +6,10 @@
   line-height: 24px;
 }
 
+.container-fluid{
+  background-color: #FFFFFF;
+}
+
 .item_contract:hover{
   background-color: rgb(255, 254, 254);
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
