--- a/src/app/main/role/role.component.html
+++ b/src/app/main/role/role.component.html
@@ -17,6 +17,7 @@
       <button *ngIf="isQLVT_01" class="btn btn-lg btn-block btn_submit" (click)="addRole()">{{'btn.add' | translate }}</button>
     </div>
   </div>
+  <div style="min-height: 77vh;">
   <div class="row" style="padding-top: 20px;">
     <p-table [value]="list" [paginator]="true" [rows]="15" id="table" [autoLayout]="true">
       <ng-template pTemplate="header" let-columns>
@@ -44,7 +45,7 @@
       </ng-template> 
     </p-table>
   </div>
-
+  </div>
   <div *ngIf="list.length == 0" 
   style="height: 100px;display: table;top: 0;left: 0;width: 100%;text-align: center;margin-top: 20px;">
     <div style="display: table-cell;vertical-align: middle;">
