Thêm logo vào menu bar bên trái

--- a/src/app/main/sidebar/sidebar.component.html
+++ b/src/app/main/sidebar/sidebar.component.html
@@ -48,6 +48,20 @@
           </li>
         </ul>
       </div>
+      <div class="sidebar-footer sidebar-footer-custom">
+        <div class="sidebar-footer-logo">
+          <div style="padding: 0; display: flex; align-items: center; vertical-align: middle">
+            <a (click)="openDashboard()">
+              <img src="assets/img/MBF_QuyChuanLogo_160219.svg" alt="Logo" class="img-responsive" width="130px" height="auto" style="vertical-align: middle;"/>
+            </a>
+          </div>
+          <div class="sidebar-footer-version">
+            <span class="sidebar-footer-version">
+              v1.16.1
+            </span>
+          </div>
+        </div>
+      </div>
       <!-- <div style="padding: 16px;">
         <img src="../../../assets/img/logo-mobifone.svg"/>
       </div> -->
