Thêm chọn trang Hợp đồng đã tạo + đã nhận + mẫu + báo cáo hợp đồng chi tiết

--- a/src/app/main/contract/contract.component.html
+++ b/src/app/main/contract/contract.component.html
@@ -159,6 +159,10 @@
             </div>
             <div class="footer_pagination">
                 <pagination-controls *ngIf="pageTotal > 0;" (pageChange)="p=$event; getContractList()" previousLabel="" nextLabel=""></pagination-controls>
+                <div class="enterPage" *ngIf="pageTotal > 0">
+                    <input class="text-enterPage" placeholder="{{'contract.enterPage' | translate}}" (keypress)="validateInput($event)" [(ngModel)]="enterPage" (input)="onInput($event)"/>
+                    <p>của {{countPage()}} trang</p>
+                </div>
             </div>
             <div class="footer_page_number">{{'chart.number' | translate}}: {{this.getPageStartEnd()}} / {{pageTotal}}
             </div>
@@ -317,6 +321,10 @@
             <div class="footer_title"></div>
             <div class="footer_pagination">
                 <pagination-controls *ngIf="pageTotal > 0;" (pageChange)="p=$event; getContractList()" previousLabel="" nextLabel=""></pagination-controls>
+                <div class="enterPage" *ngIf="pageTotal > 0">
+                    <input class="text-enterPage" placeholder="{{'contract.enterPage' | translate}}" (keypress)="validateInput($event)" [(ngModel)]="enterPage" (input)="onInput($event)"/>
+                    <p>của {{countPage()}} trang</p>
+                </div>
             </div>
             <div class="footer_page_number">{{'chart.number' | translate}}: {{this.getPageStartEnd()}} / {{pageTotal}}
             </div>
@@ -443,6 +451,10 @@
             <div class="footer_title"></div>
             <div class="footer_pagination">
                 <pagination-controls *ngIf="pageTotal > 0;" (pageChange)="p=$event; getContractList()" previousLabel="" nextLabel=""></pagination-controls>
+                <div class="enterPage" *ngIf="pageTotal > 0">
+                    <input class="text-enterPage" placeholder="{{'contract.enterPage' | translate}}" (keypress)="validateInput($event)" [(ngModel)]="enterPage" (input)="onInput($event)"/>
+                    <p>của {{countPage()}} trang</p>
+                </div>
             </div>
             <div class="footer_page_number">{{'chart.number' | translate}}: {{this.getPageStartEnd()}} / {{pageTotal}}
             </div>
@@ -588,6 +600,10 @@
             <div class="footer_title"></div>
             <div class="footer_pagination">
                 <pagination-controls *ngIf="pageTotal > 0;" (pageChange)="p=$event; getContractList()" previousLabel="" nextLabel=""></pagination-controls>
+                <div class="enterPage" *ngIf="pageTotal > 0">
+                    <input class="text-enterPage" placeholder="{{'contract.enterPage' | translate}}" (keypress)="validateInput($event)" [(ngModel)]="enterPage" (input)="onInput($event)"/>
+                    <p>của {{countPage()}} trang</p>
+                </div>
             </div>
             <div class="footer_page_number">{{'chart.number' | translate}}: {{this.getPageStartEnd()}} / {{pageTotal}}
             </div>
