--- a/src/app/main/contract-template/contract-template.component.scss
+++ b/src/app/main/contract-template/contract-template.component.scss
@@ -143,6 +143,7 @@
   width: 120px;
 }
 .footer_pagination{
+  display: flex;
   text-align: center;
 }
 .footer_page_number{
@@ -201,4 +202,22 @@
   overflow: hidden;
   display: block;
   margin: auto;
+}
+
+.enterPage {
+  display: flex;
+  margin-left: 10px
+}
+
+.enterPage input {
+  text-align:center;
+  margin-left: 5px;
+  margin-right: 5px;
+  height: 25px;width: 35%; 
+  border-radius: 5px;
+  border: 1px solid #0160AE;
+}
+
+.text-enterPage::placeholder {
+  font-size: 10px;
 }
