--- a/src/app/main/contract/contract.component.scss
+++ b/src/app/main/contract/contract.component.scss
@@ -216,6 +216,7 @@
   width: 120px;
 }
 .footer_pagination{
+  display: flex;
   text-align: center;
 }
 .footer_page_number{
@@ -300,4 +301,22 @@
 
 #table td {
   white-space: pre-wrap;
+}
+
+.enterPage {
+  display: flex;
+  margin-left: 10px
+}
+
+.enterPage input {
+  text-align:center;
+  margin-left: 5px;
+  margin-right: 5px;
+  height: 25px;width: 35%; 
+  border-radius: 5px;
+  border: 1px solid #0160AE;
+}
+
+.text-enterPage::placeholder {
+  font-size: 10px;
 }
