--- a/src/app/main/report/report-detail/report-detail.component.html
+++ b/src/app/main/report/report-detail/report-detail.component.html
@@ -60,8 +60,8 @@
 
 
     <!--Bảng dữ liệu-->
-    <div class="row" style="padding-top: 20px;">
-        <p-table #dt [value]="list" [paginator]="true" [rows]="15" id="table" [autoLayout]="true" [scrollable]="true"
+    <div class="row" style="padding-top: 20px;">       
+        <p-table #dt [value]="list" [paginator]="false" [rows]="row" id="table" [autoLayout]="true" [scrollable]="true"
         scrollDirection="horizontal">
 
             <!--header-->
@@ -129,16 +129,21 @@
                 </tr>
             </ng-template>
 
-
-            <ng-template  pTemplate="paginatorleft" let-state>
+            <!-- <div>{{state.first}}</div> -->
+            <!-- <ng-template  pTemplate="paginatorleft" let-state>
                 <span style="color: white !important;">{{'chart.number' | translate}}: {{state.first <= 0 && state.totalRecords <= 1? 0:state.first + 1}} - {{(state.first+state.rows)> state.totalRecords ? (state.totalRecords > 0 ? state.totalRecords - 1 : 0) : state.first+state.rows}} / {{state.totalRecords > 0 ? state.totalRecords - 1 : 0}}</span>
-              </ng-template>
+              </ng-template> -->
             <ng-template pTemplate="paginatorright" let-state>
                 <span style="color: #0160AE !important;">{{'chart.number' | translate}}: {{state.first <= 0 && state.totalRecords <= 1? 0:state.first + 1}} - {{(state.first+state.rows)> state.totalRecords ?(state.totalRecords > 0 ? state.totalRecords - 1 : 0) : state.first+state.rows}} / {{state.totalRecords > 0 ? state.totalRecords - 1 : 0}}</span>
             </ng-template>
         </p-table>
     </div>
 
+    <div style="display: grid;margin-top: 10px;grid-template-columns: repeat(3, 1fr)">
+        <div></div>
+        <p-paginator (onPageChange)="onPageChange($event)" [rows]="row" [totalRecords]="totalRecords"></p-paginator>
+        <div style="color: #0160AE !important;margin: auto 0 auto auto;">{{'chart.number' | translate}}: {{totalRecords === 0 ? 0 : page * row}} - {{totalRecords > 0 ? toRecord() : 0}} / {{totalRecords > 0 ? totalRecords : 0}}</div>
+    </div>
 </div>
 
 <ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#fff" type="ball-spin-clockwise">
